<resources>
    <string name="app_name">E LINE BPO</string>
    <string name="movimientos">Movimientos</string>
    <string name="action_settings">Salir</string>
    <string name="hello_world">Hello world!</string>
	<string name="drawer_open">Open drawer</string>
	<string name="drawer_close">Close drawer</string>
	<string name="MenuTitulo">Bienvenido al Sistema</string>
	<string name="MenuFoto">"   Modulo Foto"</string>
	<string name="MenuVerificacion">"   Modulo Verificación"</string>
	<string name="MenuCobranza">"   Modulo Cobranza"</string>
	<string name="MenuSalir">"   Salir"</string>
	<string name="lblModuloFoto">Registro de Fotos</string>
	<string name="lblModuloFotoNroSolicitud">"  Nro. Solicitud"</string>
	<string name="lblModuloFotoBuscarNro">" Buscar"</string>
	<string name="lblModuloFotoTitular">"  Titular"</string>
	<string name="lblModuloFotoRazonSocial">"  Razón Social"</string>
	<string name="lblModuloFotoFormato">"  Formato"</string>
	<string name="lblModuloFotoLatitud">"  Latitud"</string>
	<string name="lblModuloFotoLongitud">" Longitud"</string>
	<string name="lblModuloFotoMensaje">Mensaje</string>
	<string name="lblModuloFotoPrimera">"  Primera Foto"</string>
	<string name="lblModuloFotoSegunda">"  Segunda Foto"</string>
	<string name="lblModuloFotoTercero">"  Tercera Foto"</string>
	<string name="lblModuloVerificacion">Bienvenido al Sistema</string>
	<string name="lblModuloVerificacionBuscar">" Buscar"</string>
	<string name="lblModuloVerificacionAceptar">" Aceptar"</string>
	<string name="lblModuloVerificacionTituloTabla">"  Solicitud"</string>
	<string name="lblModuloVerificacionTituloFormato">"  Formato"</string>
	<string name="lblModuloVerificacionDatosGenerales">Datos Generales</string>
	<string name="lblModuloVerificacionNroSolicitud">"  Nro. Solicitud"</string>
	<string name="lblModuloVerificacionEntidad">"  Entidad"</string>
	<string name="lblModuloVerificacionTitular">"  Titular"</string>
	<string name="lblModuloVerificacionRazonSocial">"  Razón Social"</string>
	<string name="lblModuloVerificacionDireccion">"  Dirección"</string>
	<string name="lblModuloVerificacionDistrito">"  Distrito"</string>
	<string name="lblModuloVerificacionProvincia">"  Provincia"</string>
	<string name="lblModuloVerificacionDepartamento">"  Departamento"</string>
	<string name="lblModuloVerificacionObservacionGeneral">"  Observación"</string>
	<string name="lblModuloVerificacionFechaIngreso">"  Fecha de Ingreso"</string>
	<string name="lblModuloVerificacionTipoFormato">"  Tipo de Formato"</string>
	<string name="lblModuloVerificacionDatosVerificacion">Datos de la Verificación</string>
	<string name="lblModuloVerificacionIndependienteLaboral">Independiente Laboral</string>
	<string name="lblModuloVerificacionResultado">"  Resultado de Verificación"</string>
	<string name="lblModuloVerificacionVisita1">"  Primera Visita"</string>
	<string name="lblModuloVerificacionFecha1">" Elegir Fecha 01"</string>
	<string name="lblModuloVerificacionHora1"> Elegir Hora 01</string>
	<string name="lblModuloVerificacionVisita2">"  Segunda Visita"</string>
	<string name="lblModuloVerificacionFecha2">" Elegir Fecha 02"</string>
	<string name="lblModuloVerificacionHora2">" Ejegir Hora 02"</string>
	<string name="lblModuloVerificacionInformante">"  Nombre de Informante"</string>
	<string name="lblModuloVerificacionDocInformante">"  Tipo Documento Informante"</string>
	<string name="lblModuloVerificacionMostroDoc">"  Mostro Documento"</string>
	<string name="lblModuloVerificacionNroDoc">Nro. Doc</string>
	<string name="lblModuloVerificacionRelacionTitular">"  Relación Informante - Titular"</string>
	<string name="lblModuloVerificacionHabita">"  Habita"</string>
	<string name="lblModuloVerificacionHabitaForma">"  Habita de Forma"</string>
	<string name="lblModuloVerificacionFormaAtencion">"  Forma de Atención"</string>
	<string name="lblModuloVerificacionGrupoHabitacional">"  Grupo Habitacional"</string>
	<string name="lblModuloVerificacionLabora1">"  Laboran"</string>
	<string name="lblModuloVerificacionNoLabora1">" No Laboran"</string>
	<string name="lblModuloVerificacionTotal1">" Total"</string>
	<string name="lblModuloVerificacionGrupoFamiliar">"  Grupo Familiar"</string>
	<string name="lblModuloVerificacionLabora2">"  Laboran"</string>
	<string name="lblModuloVerificacionNoLabor2">" No Laboran"</string>
	<string name="lblModuloVerificacionTotal2">" Total"</string>
	<string name="lblModuloVerificacionPropiedadInmueble">"  Propiedad del Inmueble"</string>
	<string name="lblModuloVerificacionTipoMoneda">"  Tipo Moneda"</string>
	<string name="lblModuloVerificacionMontoAlquiler">"  Monto Alquiler"</string>
	<string name="lblModuloVerificcionFrecuenciaPago">"  Frecuencia Pago Alquiler"</string>
	<string name="lblModuloVerificacionTiempoResidencia">"  Tiempo de Residencia"</string>
	<string name="lblModuloVerificacionTipoInmueble">"  Tipo de Inmueble"</string>
	<string name="lblModuloVerificacionAnoMesDia">"  (Años/meses/días)"</string>
	<string name="lblModuloVerificacionUbicacionInmueble">"  Ubicación del Inmueble"</string>
	<string name="lblModuloVerificacionEstadoInmueble">"  Estado del Inmueble"</string>
	<string name="lblModuloVerificacionPisosInmueble">"  N° Pisos del Inmueble"</string>
	<string name="lblModuloVerificacionPisoConjunto">"  N° Pisos del Conjunto"</string>
	<string name="lblModuloVerificacionMaterialInmueble">"  Material del Inmueble"</string>
	<string name="lblModuloVerificacionColorInmueble">"  Color del Inmueble"</string>
	<string name="lblModuloVerificacionServicioBasico">"  Servicios Básicos"</string>
	<string name="lblModuloVerificacionAgua">" Agua"</string>
	<string name="lblModuloVerificacionLuz">" Luz"</string>
	<string name="lblModuloVerificacionDesague">" Desague"</string>
	<string name="lblModuloVerificacionTipoBarrio">"  Tipo de Barrio"</string>
	<string name="lblModuloVerificacionEstadoBarrio">"  Estado del Barrio"</string>
	<string name="lblModuloVerificacionEstadoCivil">"  Estado Civil"</string>
	<string name="lblModuloVerificacionTelefonoTitular">"  Teléfono Titular"</string>
	<string name="lblModuloVerificacionNroSuministro">"  Nro. Suministro"</string>
	<string name="lblModuloVerificacionDireccionCorrecta">"  Dirección Correcta"</string>
	<string name="lblModuloVerificacionObservaciones">"  Observaciones"</string>
	<string name="lblModuloVerificacionPrimeraFoto">" Primera Foto"</string>
	<string name="lblModuloVerificacionSegundaFoto">" Segunda Foto"</string>
	<string name="lblModuloVerificacionGuardar">" Guardar Datos"</string>
	<string name="lblModuloVerificacionRegresar">"  Regresar"</string>
	<string name="lblModuloVerificacionCargoInformante">"  Cargo Informante"</string>
	<string name="lblModuloVerificacionAreaInformante">"  Area Informante"</string>
	<string name="lblModuloVerificacionCorrespondeEmpresa">"  Corresponde Empresa?"</string>
	<string name="lblModuloVerificacionLabora">"  Labora?"</string>
	<string name="lblModuloVerificacionModalidad">"  Modalidad"</string>
	<string name="lblModuloVerificacionCargoTitular">"  Cargo de Titular"</string>
	<string name="lblModuloVerificacionAreaTitular">"  Area de Titular"</string>
	<string name="lblModuloVerificacionAntiguedadLaboral">"  Antiguedad Laboral"</string>
	<string name="lblModuloVerificacionAntiguedadEmpresa">"  Antiguedad de la Empresa"</string>
	<string name="lblModuloVerificacionSueldo">"  Sueldo"</string>
	<string name="lblModuloVerificacionPeriodoPago">"  Periodo de Pago"</string>
	<string name="lblModuloVerificacionRubroEmpresa">"  Rubro de la Empresa"</string>
	<string name="lblModuloVerificacionCantidadTrabajadores">"  Cantidad de Trabajadores"</string>
	<string name="lblModuloVerificacionTelefonoEmpresa">"  Teléfono Empresa"</string>
	<string name="lblModuloVerificacionRucEmpresa">"  Ruc Empresa"</string>
	<string name="lblModuloVerificacionOcupacionTitular">"  Ocupación Titular"</string>
	<string name="lblModuloVerificacionFechaInicioLaboral">"  Fecha Inicio Laboral"</string>
	<string name="lblModuloVerificacionIngresosTitular">"  Ingresos del Titular"</string>
	<string name="lblModuloVerificacionRecibioProducto">"  Recibió Producto?"</string>
	<string name="lblModuloVerificacionFechaPrestamo">"  Fecha Prestamo"</string>
	<string name="lblModuloVerificacionArtefactos">"  Artefactos Adquiridos"</string>
	<string name="lblModuloVerificacionResidenciaActual">Residencia Actual</string>
	<string name="lblModuloVerificacionDepartamentoE">"  Departamento"</string>
	<string name="lblModuloVerificacionProvinciaE">"  Provincia"</string>
	<string name="lblModuloVerificacionDistritoE">"  Distrito"</string>
	<string name="lblModuloVerificacionSector">"  Sector"</string>
	<string name="lblModuloVerificacionCallePrincipal">"  Calle Principal"</string>
	<string name="lblModuloVerificacionLoteNro">"  Lote o Nro."</string>
	<string name="lblModuloVerificacionCalleTransversal">"  Calle Transversal"</string>
	<string name="lblModuloVerificacionReferencia">"  Referencia"</string>
	<string name="lblModuloVerificacionTipoVivienda">"  Tipo Vivienda"</string>
	<string name="lblModuloVerificacionTerceraFoto">" Tercera Foto"</string>
	<string name="lblModuloVerificacionDatosCobranza">Datos de la Cobranza</string>
	<string name="lblModuloVerificacionDocumentoPendiente">"  Documento Pendiente"</string>
	<string name="lblModuloVerificacionMontoDeuda">"  Monto de Deuda"</string>
	<string name="lblModuloVerificacionTelefono">"  Teléfono"</string>
	<string name="lblModuloVerificacionGestorCobranza">"  Gestor de Cobranza"</string>
	<string name="lblModuloVerificacionFechaEntregaCarta">"  Fecha Entrega Carta"</string>
	<string name="lblModuloVerificacionPersona">"  Persona que recepciono carta"</string>
	<string name="lblModuloVerificacionParentesco">"  Parentesco (Opcional)"</string>
	<string name="lblModuloVerificacionTelefonoFijo">"  Teléfono Fijo"</string>
	<string name="lblModuloVerificacionTelefonoMovil">"  Teléfono Movil"</string>
	<string name="lblModuloVerificacionDireccionC">"  Dirección"</string>
	<string name="lblModuloVerificacionResultadoGestion">"  Resultado de Gestión"</string>
	<string name="lblModuloVerificacionCargaFamiliar">"  Carga Familiar"</string>
	<string name="lblModuloVerificacionConyugueHijos">"  Cónyuge, hijos"</string>
	<string name="lblModuloVerificacionPadres">" Padres"</string>
	<string name="lblModuloVerificacionHermanos">"  Hermanos"</string>
	<string name="lblModuloVerificacionSuegros">" Suegros"</string>
	<string name="lblModuloVerificacionOtrosCargaFamiliar">"  Otros"</string>
	<string name="lblModuloVerificacionTechos">"  Techos"</string>
	<string name="lblModuloVerificacionParedes">"  Paredes"</string>
	<string name="lblModuloVerificacionPisos">"  Pisos"</string>
	<string name="lblModuloVerificacionServiciosBasicosBoton">" Servicios Básicos"</string>
	<string name="lblModuloVerificacionServiciosSeleccionados">"  Servicios Seleccionados"</string>
	<string name="lblModuloVerificacionInventarioBienes">"  Inventario Bienes"</string>
	<string name="lblModuloVerificacionInventarioBienesBoton">" Inventario Bienes"</string>
	<string name="lblModuloVerificacionInventariosBienesSeleccionados">"  Inventario Bienes Seleccionados"</string>
	<string name="lblModuloVerificacionInventarioChekbox">"  Auto&lt;10 años - Año"</string>
	<string name="lblModuloVerificacionInventarioModelo">" Modelo"</string>
	<string name="lblModuloVerificacionSuministroLuz">"  Nro Suministro Luz"</string>
	<string name="lblModuloVerificacionCelular">"  Celular"</string>
	<string name="lblModuloVerificacionPerfilLabora">"  Perfil Laboral"</string>
	<string name="lblModuloVerificacionSituacionLaboral">"  Situación Laboral"</string>
	<string name="lblModuloVerificacionIngresoMensual">"  Ingreso Mensual"</string>
	<string name="lblModuloVerificacionIndependiente">"  Independiente"</string>
	<string name="lblModuloVerificacionPuestoFijo">"  Puesto Fijo"</string>
</resources>