<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >   
    
    <LinearLayout
        android:id="@+id/LinerLayoutDatosGenerales"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
       
        <ImageView
            android:id="@+id/imgRegVlogo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:src="@drawable/logo_eline" />

        <TextView
    	    android:id="@+id/lblRegVDatoGeneral"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:gravity="center"
    	    android:text="@string/lblModuloVerificacionDatosGenerales"
    	    android:textColor="#4B0082"
    	    android:textSize="20sp"
    	    android:textStyle="bold" />

   		<TextView
   		    android:id="@+id/lblRegVNroSolicitud"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:text="@string/lblModuloVerificacionNroSolicitud" />

        <EditText
            android:id="@+id/txtRegVNrosolicitud"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
			android:inputType="textCapSentences" />
        
        <requestFocus />
        
        <TextView
            android:id="@+id/lblRegVEntidad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblModuloVerificacionEntidad" />

        <EditText
            android:id="@+id/txtRegVEntidad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/lblRegVTitular"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblModuloVerificacionTitular" />

        <EditText
            android:id="@+id/txtRegVTitular"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/lblRegVRazonSocial"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblModuloVerificacionRazonSocial" />

        <EditText
            android:id="@+id/txtRegVRazonSocial"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblRegVDireccion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblModuloVerificacionDireccion" />

        <EditText
            android:id="@+id/txtRegVDireccion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/lblRegVDistrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblModuloVerificacionDistrito" />

        <EditText
            android:id="@+id/txtRegVDistrito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/lblRegVProvincia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblModuloVerificacionProvincia" />

        <EditText
            android:id="@+id/txtRegverifProvincia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/lblRegVDepartamento"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblModuloVerificacionDepartamento" />

        <EditText
            android:id="@+id/txtRegVDepartamento"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/lblRegVObservacionesGeneral"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblModuloVerificacionObservacionGeneral" />

        <EditText
            android:id="@+id/txtRegVObservacionesGeneral"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        
         <TextView
             android:id="@+id/lblRegVFechaIngreso"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/lblModuloVerificacionFechaIngreso" />

        <EditText
            android:id="@+id/txtRegVFechaIngreso"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
        
         <TextView
             android:id="@+id/lblRegVDatoVerificacion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/lblModuloVerificacionDatosVerificacion"
             android:textColor="#4B0082"
             android:textSize="18sp"
             android:textStyle="bold" />
        
        <TextView
            android:id="@+id/lblRegVIndependienteLaboral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lblModuloVerificacionIndependienteLaboral"
            android:textColor="#4B0082"
            android:textSize="18sp"
            android:textStyle="bold" />
        
          <TextView
              android:id="@+id/lblRegVFormatoD"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/lblModuloVerificacionTipoFormato" />

        <EditText
            android:id="@+id/txtRegVFormatD"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
	</LinearLayout>
</ScrollView>